<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lost Chronicle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="scheduler_activity_button_name">Chronicle</string>
	<string name="rpg_battle_activity_button_name">Serithras\'s Lair</string>
	<string name="companion_activity_button_name">Kanojo</string>
	<string name="scheduler_activity_label">Scheduler</string>
	<string name="rpg_battle_activity_label">RPG Battle</string>
	<string name="companion_activity_label">Kanojo</string>
	<string name="home_action_item">Home</string>
	<string name="store_action_item">Store</string>
	<string name="google_play_dialog">Please tap \"Continue\" to add a payment method and complete your purchase.</string>
	<string name="strength_text_title">Strength</string>
	<string name="dexterity_text_title">Dexterity</string>
	<string name="constitution_text_title">Constitution</string>
	<string name="intelligence_text_title">Intelligence</string>
	<string name="wisdom_text_title">Wisdom</string>
	<string name="charisma_text_title">Charisma</string>
	<string name="level_text_title">Level</string>
	<string name="health_text_title">Health</string>
	<string name="attack_text_title">Attack</string>
	<string name="magic_attack_title">Magic Attack</string>
	<string name="defence_text_title">Defence</string>
	<string name="dodge_text_title">Dodge%</string>
	<string name="hit_text_title">Hit%</string>
	<string name="magic_defence_text_title">Magic Defence</string>
	<string name="crit__text_title">Critical%</string>
	<string name="create_activity_item">New Event</string>
	<string name="rpg_selector_label">RPG Selection Screen</string>
	<string name="avatar_name">The Lost</string>
	<string name="battles_won_title">Battles Won</string>
	<string name="current_gold_title">Gold</string>
	<string-array name="stats">
		<item>Strength</item>
		<item>Intellect</item>
		<item>Dexterity</item>
		<item>Wisdom</item>
		<item>Charisma</item>
		<item>Constitution</item>
	</string-array>
		<string name="stat_text_title">Stats</string>
		<string name="attribute_text_title">Attributes</string>
		<string name="time_conflict_toast">There is a conflict with the time you have entered.</string>
		<string name="avatar_level">Level</string>
</resources>
