<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/kanojo_info_layout" >

    <TextView
        android:id="@+id/dodge_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hit_title_view"
        android:layout_alignParentLeft="true"
        android:background="#55000000"
        android:text="@string/dodge_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/magic_defence_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dodge_title_view"
        android:layout_alignParentLeft="true"
        android:background="#55000000"
        android:text="@string/magic_defence_text_title"
        android:textColor="#fff600"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/defence_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/magic_defence_title_view"
        android:layout_alignParentLeft="true"
        android:background="#55000000"
        android:text="@string/defence_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/attack_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/defence_title_view"
        android:layout_alignParentLeft="true"
        android:background="#55000000"
        android:text="@string/attack_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/health_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/attack_title_view"
        android:layout_alignParentLeft="true"
        android:background="#55000000"
        android:text="@string/health_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/crit_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:background="#55000000"
        android:text="@string/crit__text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/hit_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/crit_title_view"
        android:layout_alignParentLeft="true"
        android:background="#55000000"
        android:text="@string/hit_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/intellect_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/strength_title_view"
        android:layout_below="@+id/strength_title_view"
        android:background="#55000000"
        android:text="@string/intelligence_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/dexterity_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/intellect_title_view"
        android:layout_below="@+id/intellect_title_view"
        android:background="#55000000"
        android:text="@string/dexterity_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/constitution_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dodge_title_view"
        android:layout_alignLeft="@+id/dexterity_title_view"
        android:background="#55000000"
        android:text="@string/constitution_text_title"
        android:textColor="#fff600"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/wisdom_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/constitution_title_view"
        android:layout_below="@+id/constitution_title_view"
        android:background="#55000000"
        android:text="@string/wisdom_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/charisma_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/crit_title_view"
        android:layout_alignLeft="@+id/wisdom_title_view"
        android:background="#55000000"
        android:text="@string/charisma_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/dodge_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/magic_defence_field"
        android:layout_below="@+id/magic_defence_field"
        android:background="#55000000"
        android:text="1"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/hit_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/crit_title_view"
        android:layout_alignLeft="@+id/dodge_field"
        android:background="#55000000"
        android:text="1"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/crit_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hit_field"
        android:layout_below="@+id/hit_field"
        android:background="#55000000"
        android:text="1"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/strength_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/attack_field"
        android:layout_centerHorizontal="true"
        android:background="#55000000"
        android:text="@string/strength_text_title"
        android:textColor="#fff600" />

    <TextView
        android:id="@+id/magic_defence_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/magic_defence_title_view"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/magic_defence_title_view"
        android:background="#55000000"
        android:text="1"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/attack_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/defence_title_view"
        android:layout_alignLeft="@+id/magic_defence_field"
        android:background="#55000000"
        android:text="1"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/health_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/strength_title_view"
        android:layout_alignBottom="@+id/strength_title_view"
        android:layout_alignLeft="@+id/attack_field"
        android:background="#55000000"
        android:text="1"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/defence_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/magic_defence_field"
        android:layout_alignLeft="@+id/magic_defence_field"
        android:background="#55000000"
        android:text="1"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/intellect_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dexterity_title_view"
        android:layout_alignRight="@+id/strength_field"
        android:background="#55000000"
        android:text="23"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/dexterity_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/magic_defence_field"
        android:layout_alignLeft="@+id/intellect_field"
        android:background="#55000000"
        android:text="56"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/charisma_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dexterity_field"
        android:layout_below="@+id/dodge_field"
        android:background="#55000000"
        android:text="19"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/constitution_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dodge_field"
        android:layout_alignLeft="@+id/dexterity_field"
        android:background="#55000000"
        android:text="40"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/wisdom_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/charisma_field"
        android:layout_alignLeft="@+id/charisma_field"
        android:background="#55000000"
        android:text="28"
        android:textColor="#00ffa0" />

    <TextView
        android:id="@+id/strength_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/intellect_field"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/intellect_title_view"
        android:background="#55000000"
        android:text="100"
        android:textColor="#00ffa0" />

</RelativeLayout>